--- a/src/app/form-viewer/form-viewer.component.html
+++ b/src/app/form-viewer/form-viewer.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <!-- <mat-card> -->
     <form [formGroup]="formView">
-        <mat-grid-list [ngStyle]="{ width: ((3 * 1) / 3) * 100 + '%' }" [cols]="3" rowHeight="70px">
+        <mat-grid-list [ngStyle]="{ width: ((3 * 1) / 3) * 100 + '%' }" [cols]="3" rowHeight="80px">
         <mat-grid-tile *ngFor="let field of fields; let i = index" [colspan]="1"
         [rowspan]="1">
             <div *ngIf="field.type == 'label'" class="row">
@@ -9,7 +9,11 @@
         </div>
         <div *ngIf="field.type === 'text'" class="row">
             <mat-form-field class="col-md-8">
-                <input matInput placeholder="{{ field.label}}" [formControlName]="i" [required]="field.required">
+                <input matInput placeholder="{{ field.label}}" [formControlName]="i" [required]="field.required ? true : null">
+                <!-- <mat-hint>You can not enter character more than {{ field.allowChar }}</mat-hint> -->
+              <mat-error *ngIf="formView.controls[i].invalid">
+                      Enter Valid Data
+              </mat-error>
               </mat-form-field>
         </div>
         <div *ngIf="field.type === 'radio'" class="row radioButton">
@@ -21,6 +25,9 @@
                     </mat-radio-button>
                 </div>
               </mat-radio-group>
+              <mat-error *ngIf="formView.controls[i].invalid">
+                Enter Valid Data
+        </mat-error>
         </div>
         <div *ngIf="field.type === 'dropdown'" class="row">
             <mat-form-field>
@@ -30,6 +37,9 @@
                 {{row.option}}
               </mat-option>
             </mat-select>
+            <mat-error *ngIf="formView.controls[i].invalid">
+                Enter Valid Data
+        </mat-error>
         </mat-form-field>
         </div>
         </mat-grid-tile>
